# halfway-meetup-app

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  models.py  schemas.py
backend/app/routers/: compute.py
backend/app/services/: places.py  review_analysis.py  venue_enrichment.py
backend/data/: app.db
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/sessions/: route.ts
frontend/src/app/api/sessions/[id]/: route.ts
frontend/src/app/api/sessions/[id]/compute/: route.ts
frontend/src/app/api/sessions/[id]/join/: route.ts
frontend/src/app/api/sessions/[id]/vote/: route.ts
frontend/src/app/session/[id]/: page.tsx
frontend/src/app/session/[id]/vote/: page.tsx
frontend/src/components/: MapDisplay.tsx  MapPinDrop.tsx  SessionStatus.tsx  ShareLink.tsx  VenueCard.tsx  VenueList.tsx
frontend/src/hooks/: useSessionPolling.ts
frontend/src/lib/: constants.ts  types.ts
