[project]
name = "halfway-backend"
version = "0.1.0"
description = "Halfway Meetup App - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "pydantic-settings>=2.0.0",
    "nanoid>=2.0.0",
]
